welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:1: error: Missing closing brace `}' assumed here
def sumDouble(a: Integer, b: Integer): Integer = {
^